--- a/project2/playbook.yaml
+++ b/project2/playbook.yaml
@@ -11,3 +11,17 @@
           - apache2
           - php
           - php-xml
+    - name: Create the /var/www directory (if it doesn't already exist)
+      ansible.builtin.file:
+        path: /var/www
+        state: directory
+    - name: create an ext4 filtesystem for data
+      community.general.filesystem:
+        fstype: ext4
+        dev: /dev/disk/by-id/google-data 
+    - name: Mount my data disk under /var/www
+      ansible.posix.mount:
+        path: /var/www
+        src: /dev/disk/by-id/google-data 
+        fstype: ext4
+        state: mounted
