--- a/project2/playbook.yaml
+++ b/project2/playbook.yaml
@@ -15,6 +15,10 @@
       ansible.builtin.file:
         path: /var/www
         state: directory
+    - name: Create the /var/www/html directory (if it doesn't already exist)
+      ansible.builtin.file:
+        path: /var/www/html
+        state: directory
     - name: create an ext4 filtesystem for data
       community.general.filesystem:
         fstype: ext4
@@ -25,3 +29,16 @@
         src: /dev/disk/by-id/google-data 
         fstype: ext4
         state: mounted
+    - name: Download and unarchive Dokuwiki file
+      ansible.builtin.unarchive:
+        src: https://download.dokuwiki.org/src/dokuwiki/dokuwiki-stable.tgz
+        dest: /var/www/html
+        remote_src: yes
+    - name: chown/chmod -R www-data for /var/www/html file
+      ansible.builtin.file:
+        path: /var/www/html
+        state: directory
+        recurse: yes
+        owner: www-data
+        group: www-data
+        mode: '0775'
