added Shebang to backup.sh and added .sh to the end of the backup file in /etc/cron.hourly

--- a/project2/playbook.yaml
+++ b/project2/playbook.yaml
@@ -45,5 +45,5 @@
     - name: Download backup from GitHub
       ansible.builtin.get_url:
         url: https://raw.githubusercontent.com/connormunger/cis-91/main/project2/backup.sh
-        dest: /etc/cron.hourly/backup
+        dest: /etc/cron.hourly/backup.sh
         mode: '0775'
